examples/bad/wrong_parameters_number.c
int test_function(int a, int b) {
	return a + b;
}

int main() {
	test_function(1, 2, 3);
}